@@ -3,6 +3,9 @@ TODO list for Olive
 
  - Be able to install into other locations than /usr (LarstiQ)
  - Investigate TortoiseSVN-like commit/add dialogs (LarstiQ)
-   http://samba.org/~jelmer/bzr/gcommit.png
+   http://samba.org/~jelmer/bzr/gcommit.png [DONE]
  - HIGify the interface (Matthieu Moy)
  - Consistent placement of buttons (Matthieu Moy)
+ - Display the count of pushed revisions on push (phanatic) [DONE]
+ - Display the commit file selector as a tree (so whole directories can be
+   toggled) (j-a-meinel)
