@@ -88,26 +88,31 @@ class OliveCommit:
     
     # This code is from Jelmer Vernooij's bzr-gtk branch
     def _create_file_view(self):
-        self.file_store = gtk.ListStore(gobject.TYPE_BOOLEAN, gobject.TYPE_STRING, gobject.TYPE_STRING)
+        self.file_store = gtk.ListStore(gobject.TYPE_BOOLEAN,
+                                        gobject.TYPE_STRING,
+                                        gobject.TYPE_STRING)
         self.file_view = self.glade.get_widget('treeview_commit_select')
         self.file_view.set_model(self.file_store)
         crt = gtk.CellRendererToggle()
         crt.set_property("activatable", True)
         crt.connect("toggled", self._toggle_commit, self.file_store)
-        self.file_view.append_column(gtk.TreeViewColumn("Commit",crt,active=0))
-        self.file_view.append_column(gtk.TreeViewColumn("Path",gtk.CellRendererText(),text=1))
-        self.file_view.append_column(gtk.TreeViewColumn("Type",gtk.CellRendererText(),text=2))
+        self.file_view.append_column(gtk.TreeViewColumn("Commit",
+                                     crt, active=0))
+        self.file_view.append_column(gtk.TreeViewColumn("Path",
+                                     gtk.CellRendererText(), text=1))
+        self.file_view.append_column(gtk.TreeViewColumn("Type",
+                                     gtk.CellRendererText(), text=2))
 
-        for path, id, kind in self.delta.added:
+        for path, _, _ in self.delta.added:
             self.file_store.append([ True, path, "added" ])
 
-        for path, id, kind in self.delta.removed:
+        for path, _, _ in self.delta.removed:
             self.file_store.append([ True, path, "removed" ])
 
-        for oldpath, newpath, id, kind, text_modified, meta_modified in self.delta.renamed:
+        for oldpath, _, _, _, _, _ in self.delta.renamed:
             self.file_store.append([ True, oldpath, "renamed"])
 
-        for path, id, kind, text_modified, meta_modified in self.delta.modified:
+        for path, _, _, _, _ in self.delta.modified:
             self.file_store.append([ True, path, "modified"])
     
     def _get_specific_files(self):
@@ -115,7 +120,7 @@ class OliveCommit:
         it = self.file_store.get_iter_first()
         while it:
             if self.file_store.get_value(it, 0):
-                ret.append(self.file_store.get_value(it,1))
+                ret.append(self.file_store.get_value(it, 1))
             it = self.file_store.iter_next(it)
 
         return ret
